tests/fn/fail_over_application.fn
let
    h = fn (x, y) { x + y };
in
    h(1, 2, 3)  // error: tried to apply an extra argument to a non-function
